add index html and include in compilation

--- a/csh_server.csproj
+++ b/csh_server.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Copy only the index.html file to the output directory -->
+    <None Include="www/index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
